src/scss/style.scss
// Import all of your scss files here

@font-face {
  font-family: 'RunchFont';
  src: url('/fonts/RunchFont.eot');
  src: url('/fonts/RunchFont.woff2') format('woff2'),
  url('/fonts/RunchFont.woff') format('woff'),
  url('/fonts/RunchFont.ttf') format('truetype'),
  url('/fonts/RunchFont.svg#TypoRoundThinDemo') format('svg'),
  url('/fonts/RunchFont.eot?#iefix') format('embedded-opentype');
  font-weight: normal;
  font-style: normal;
}

@import url('https://fonts.googleapis.com/css?family=Poppins');

html, body {
  margin: 0;
}

body {
  // font-family: 'RunchFont';
}

a {
  text-decoration: none !important;
  font-family: "RunchFont";
  color: black;
}

h1, h2, h3, h4, h5 {
  color: black;
  font-family: 'RunchFont';
  color: #8EB77B
}

p {
  font-family: 'Poppins', sans-serif;
  font-size: 10px
}

.map-styling {
  width: 100%;
  height: 300px;
  display: inline-block;
  background-color: rgba(124,183,123,.5);
}

main {
  margin: 10px;
}

// *************Landing Page*********************

video {
  position: fixed;
  top: 0;
  left: 0;
  min-width: 100%;
  min-height: 100%;
  width: auto;
  height: auto;
  z-index: -100;
}

#logo {
  width: 400px;
}

nav ul li {
  color: white;
  display: inline;
  font-size: 20px;
  text-decoration: none;
  font-family: 'RunchFont', serif;
  float: right;
  padding: 10px;
}

nav a {
  color: white !important;
  list-style: none;
  font-family: 'RunchFont', serif;
  text-decoration: none;
  font-size: 30px;
}

.front-para {
  position: absolute;
  width: 102%;
  top: 40%;
  padding: 5px;
  background-color: rgba(124,183,123,.5);
  font-size: 51px;
  color: black;
  font-family: 'RunchFont';
  margin-left: -12px;
  text-align: center;
}

// .mainContainer {
//   position: absolute;
//   width: 102%;
//   top: 0%;
//   padding: 30px;
//   background-color: rgba(255, 255, 255, 0.3);
//   font-size: 51px;
//   color: white;
//   font-family: 'RunchFont';
//   margin-left: -12px;
//   text-align: center;
//   height: 103%;
// }

.singed-in-logo {
  width: 300px;
}

// *********** Nav Block ******************
.topNavBlock {
  background-color: #8EB77B;
  padding: 15px;
  margin-top: -20px;
  margin-left: -10px;
}


// ************** Footer **********************


.socialMediaBtn {
  width: 20px;
  height: 20px;
}

li {
  display: inline-block;
  style: none;
  margin-right: 10px;
}

.copyRight {
  float: right;
  font-family: 'RunchFont';
  color: white;
}

.FooterLoggedIn {
  flex: 1;
  background-color: #8EB77B;
  padding-left: 15px;
  padding-top: 15px;
  // bottom: 10px;
  // margin-bottom: 10px;
}

.FooterLoggedOut {
  position:absolute;
  clear: both;
  bottom: 10px;
  left:0;
  right:0;
  height:10px;
  color: white;
  padding-bottom: 20px;
  font-size: 15px;
  display: inline;
  padding-left: 15px;
}

html, body {
  height: 100%;
}
.page-wrap {
  min-height: 100%;
  /* equal to footer height */
  margin-bottom: -50px;
}
.page-wrap:after {
  content: "";
  display: block;
}
footer, .page-wrap:after {
  height: 50px;
}

footer {
  ul {
    margin: 0;
    padding: 0;
  }
}

// ************** FORMS ***************

.login {
  position: fixed;
  top: 55%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.register{
  position: fixed;
  top: 60%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.form-group{
  margin-top: -10px;
}

.form-control {
  background: #f4f1ed;
  width: 500px;
  height: 40px;
  border: 0px;
  border-radius: 3px;
  text-align: center;
  font-size: 15px;
  font-family: 'RunchFont';
}

.form-button {
  background: #8EB77B;
  color: #fff;
  margin-top: 10px;
  width: 501px;
  height: 40px;
  border: 0px;
  border-radius: 3px;
  font-size: 20px;
  text-transform: uppercase;
  font-weight: bold;
  font-family: 'RunchFont';
}

.form-button:hover {
  background-color: rgba(0,0,0,.7);
  color: #8EB77B;
  border: solid 1px #8EB77B;
}

.createHeader, .editHeader {
  text-align: center;
}

// ************* Group Create Form ***********

.new {
  position: fixed;
  top: 57%;
  left: 45%;
  transform: translate(-50%, -50%);
  }

  .edit {
    position: fixed;
    top: 57%;
    left: 45%;
    transform: translate(-50%, -50%);
  }

.form-control-create {
    width: 500px;
    height: 40px;
    border: solid 1px #8EB77B;
    border-radius: 3px;
    text-align: center;
    font-size: 15px;
    font-family: 'RunchFont';
    margin-top: 6px;
  }

  .form-button-create {
    background: #8EB77B;
    color: #fff;
    margin-top: 10px;
    width: 500px;
    height: 40px;
    border: 0px;
    border-radius: 3px;
    font-size: 20px;
    text-transform: uppercase;
    font-weight: bold;
    font-family: 'RunchFont';
  }

  .form-button-create:hover {
    background-color: white;
    color: #8EB77B;
    border: solid 1px #8EB77B;
  }

  // button:hover {
  //   background-color: white;
  //   color: #8EB77B;
  //   border: solid 1px #8EB77B;
  // }


// ********** Group Show *******************

.groupInfo{
  display: inline-block;
  float: left;
  max-width: 700px;
  overflow: hidden;
}

.groupShowName {
  margin-bottom: -2px;
  margin-left: 30px;
}
.groupAdminTitle {
  display: inline-block;
  margin-left: 30px;
}
.adminUSer {
  display: inline-block;
  margin-left: 5px;
}
.groupShowBtn{
  background: #8EB77B;
  color: #fff;
  margin-top: -30px;
  margin-right: 30px;
  width: 100px;
  height: 40px;
  border: 0px;
  border-radius: 3px;
  font-size: 20px;
  text-transform: uppercase;
  font-weight: bold;
  font-family: 'RunchFont';
  display: inline-block;
  float: right;
}

.groupShowBtn:hover {
  background-color: white;
  color: #8EB77B;
  border: solid 1px #8EB77B;
}

.map-styling {
  width: 95%;
  height: 350px;
  display: block;
  background: #fff;
  position: relative;
  left: 50%;
  transform: translate(-50%);
  overflow: hidden;
  margin-top: 5px;
}

.groupInformation{
  margin-left: 60px;
  margin-top: 30px;
  display: inline-block;

.groupShowCon {
  margin-top: 20px;

  p{
    display: inline;
  }

.glyphicon{
  color: #8EB77B;
  padding-right: 10px;
  display: inline-block;
  font-size: 16px;
}

.glyphiconText{
  color: #000;
  padding-right: 25px;
  font-size: 16px;
}
}
}

.groupMembers{
  display: inline-block;
  float: right;
  overflow: hidden;
  margin-top: 20px;

  p{
    display: inline-block;
    padding-left: 10px;
    margin-top: -50px;
    font-size: 15px;
  }
}

.userImages{
  display: inline-block;
}

.img-thumbnail{
  width: 60px;
  height: 60px;
  display: inline-block;
  position: relative;
  float: left;
}

.groupDescription{
  margin-left: 60px;
  margin-top: 40px;

  p{
    font-size: 16px;
  }
}

.discussion{
  margin-left: 60px;
  margin-top: 30px;
}

.discussionBtn{
  background: #8EB77B;
  color: #fff;
  margin-right: 30px;
  width: 55px;
  height: 40px;
  border: 0px;
  border-radius: 3px;
  font-size: 20px;
  text-transform: uppercase;
  font-weight: bold;
  font-family: 'RunchFont';
  display: inline-block;
}

.discussionBtn:hover {
  background-color: white;
  color: #8EB77B;
  border: solid 1px #8EB77B;
}

.discussionBox {
  width: 400px;
  height: 100px;
  border-radius: 3px;
  border: 1px solid black;
}


// ********** Dashboard *******************

.dashCreateBtn {
  background: #8EB77B;
  color: #fff;
  margin-right: 30px;
  margin-top: 25px;
  width: 185px;
  height: 40px;
  border: 0px;
  border-radius: 3px;
  font-size: 15px;
  text-transform: uppercase;
  font-weight: bold;
  font-family: 'RunchFont';
  display: inline-block;
  float: right;
}

.dashCreateBtn:hover {
  background-color: white;
  color: #8EB77B;
  border: solid 1px #8EB77B;
}

.timetable {
  width: 20%;
  text-align: center;
}

.owned-groups {
  width: 20%;
  text-align: center;
}

.dash-groups {
  width: 80%;
  text-align: center;
}

.group-item {
  width: 33.33%;
  height: 200px;
  float: left;
  position: relative;
  padding: 5px;
  overflow: hidden;

.dashImage {
  position: relative;
  width: inherit;
}

.imageHeader {
  background-color: rgba(124,183,123,.8);
  position: relative;
  top: -62px;
  left: 0;
  width: 100%;
  color: white;
  text-align: left;
  padding: 5px;
}


  //
  // .hover {
  //   opacity: 0;
  // }

  &:hover {
    .hover {
      border: solid #8EB77B;
      text-align: center;
      opacity: 0.5;
      position: absolute;
      top: 0;
      bottom: 0;
      left: 0;
      right: 0;
      background: #8EB77B;
      -webkit-transition: opacity 0.2s ease-in;
      -moz-transition: opacity 0.2s ease-in;
      -o-transition: opacity 0.2s ease-in;
      -ms-transition: opacity 0.2s ease-in;
      transition: opacity 0.2s ease-in;




      // -o-transition:.7s;
      // -ms-transition:.7s;
      // -moz-transition:.7s;
      // -webkit-transition:.7s;
      // -webkit-transform: rotate(360deg);
      // transform: rotate(360deg);
    }
  }

}

.group-image {
  width: 100%;
  height: 100%;
}

// ********** User Profie/Show *******************

.profile-info {
  width: 20%;
}

.profile-image {
  width: 100%;
  height: 100%;
}

.user-groups {
  width: 80%;
  text-align: center;
}
 // ********** Search Form ************

input[type=search] {
	-webkit-appearance: textfield;
	-webkit-box-sizing: content-box;
	font-family: 'RunchFont';
	font-size: 100%;
}
input::-webkit-search-decoration,
input::-webkit-search-cancel-button {
	display: none;
}

input[type=search] {
	background: rgba(124,183,123,.8) url(http://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat 9px center;
	border: solid 1px #8EB77B;
	padding: 9px 10px 9px 32px;
	width: 55px;

	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 20px;

	-webkit-transition: all .5s;
	-moz-transition: all .5s;
	transition: all .5s;
}
input[type=search]:focus {
	width: 70px;
	background-color: #fff;
	border-color: #8EB77B;

}

// size of the search Bar before
#searchBar input[type=search] {
  width: 17px;
  padding-left: 10px;
  color: transparent;
}
#searchBar input[type=search]:hover {
	background-color: #fff;
}
#searchBar input[type=search]:hover {
	width: 1000px;
	padding-left: 32px;
	color: #8EB77B;
	background-color: #fff;
	cursor: auto;
}
#searchBar input:-moz-placeholder {
	color: transparent;
}
#searchBar input::-webkit-input-placeholder {
	color: transparent;
}

